[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
proc_enum = { path = "crates/proc_enum" }

[workspace.dependencies]
syn = "*"
quote = "*"
proc-macro2 = "*"